--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,6 +3,8 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches: [main] # Change this if your default branch is different
+  workflow_dispatch:
+
 
 permissions:
   contents: read
